# text-editor

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
src/: main.c
src/gui/: button.h  graphics.c  graphics.h  renderer.c  renderer.h  window.h
src/utils/: vector.c  vector.h
tests/: test_vector.c
